# HBSIR

./: .gitignore  404.html  LICENCE  README.md  hbsir_quick_start.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
api/: index.html
api/add_attribute/: index.html
api/add_classification/: index.html
api/add_weight/: index.html
api/calculate_add_decile/: index.html
api/calculate_add_percentile/: index.html
api/calculate_add_quantile/: index.html
api/calculate_average_table/: index.html
api/calculate_quantile/: index.html
api/calculate_weighted_average/: index.html
api/load_knowledge/: index.html
api/load_table/: index.html
api/setup/: index.html
api/setup_config/: index.html
data/: index.html
data/README.fa/: index.html
docs/: README.md
docs/api/: README.md  add_attribute.md  add_classification.md  add_weight.md  calculate_add_decile.md  calculate_add_percentile.md  calculate_add_quantile.md  calculate_average_table.md  calculate_quantile.md  calculate_weighted_average.md  load_knowledge.md  load_table.md  setup.md  setup_config.md
docs/data/: README.fa.md  README.md
docs/knowledge/: README.md  sci_results.py
docs/tables/: README.md
docs/tables/cleaned/: census_month.md  cloth.md  communication.md  durable.md  education.md  employment_income.md  entertainment.md  food.md  furniture.md  home.md  hotel.md  house_specifications.md  household_information.md  investment.md  medical.md  members_properties.md  miscellaneous.md  old_agricultural_self_employed_income.md  old_non_agricultural_self_employed_income.md  old_other_income.md  old_rural_house_specifications.md  old_rural_private_employment_income.md  old_rural_public_employment_income.md  old_urban_house_specifications.md  old_urban_private_employment_income.md  old_urban_public_employment_income.md  other_income.md  self_employed_income.md  subsidy.md  tobacco.md  transportation.md
docs/tables/raw/: census_month.md  cloth.md  communication.md  durable.md  education.md  employment_income.md  (+25 more)
docs/tutorials/: tehran_rents.py
docs/usage/: installation.md
examples/: data_engine_usage.ipynb
hbsir/: __init__.py  api.py  calculate.py  commodities_auto.yaml  data_engine.py  maintainer.py
hbsir/config/: settings.yaml
hbsir/internal_data/: province_weights_1371.csv  province_weights_1373.csv
hbsir/metadata/: commodities.yaml  id_information.yaml  raw_files.yaml  schema.yaml  tables.yaml
hbsir/schema_functions/: calorie_requirements.py  standard_tables.py  weight.py
knowledge/: index.html
knowledge/sci_results/: index.html
src/hbsir/: __init__.py  api.py  maintainer.py
tables/: index.html
tutorials/tehran_rents/: index.html
usage/installation/: index.html
(+1218 files in other folders)
