[project]
name = "hbsir"
version = "0.6.3"
description = "An intuitive platform designed to simplify the analysis of Iran household budget survey data."
readme = "README.md"
authors = [
  { name = "Mohammad Amin Alavian", email = "m.amin.alavian@gmail.com" }
]
keywords = ["iran", "survey", "data", "socioeconomic"]
requires-python = ">=3.10"
dependencies = [
  "bssir",
]

[project.optional-dependencies]
all = [
  "bssir[all]",
]
dev = [
  "bssir[dev]",
]
maintain = [
  "bssir[maintain]",
]
notebook = [
  "bssir[notebook]",
]

[project.urls]
Homepage = "https://github.com/Iran-Open-Data/HBSIR"
Repository = "https://github.com/Iran-Open-Data/HBSIR"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
hbsir = ["**/*.yaml", "**/*.csv"]
