[project]
name = "hbsir"
version = "0.6.5"
description = "An intuitive platform designed to simplify the analysis of Iran household budget survey data."
readme = "README.md"
authors = [
  { name = "Mohammad Amin Alavian", email = "m.amin.alavian@gmail.com" }
]
keywords = ["iran", "survey", "data", "socioeconomic"]
requires-python = ">=3.10"
dependencies = [
  "bssir>=0.6.7",
]

[project.optional-dependencies]
all = [
  "bssir[all]",
]
dev = [
  "bssir[dev]",
]
maintain = [
  "bssir[maintain]",
]
notebook = [
  "bssir[notebook]",
]
plot = [
  "bssir[plot]",
]

[project.urls]
Homepage = "https://github.com/Iran-Open-Data/HBSIR"
Repository = "https://github.com/Iran-Open-Data/HBSIR"

[tool.uv]
package = true

[tool.uv.workspace]
members = [
  ".",
]

[tool.uv.sources]
hbsir = { workspace = true, editable = true }

[dependency-groups]
dev = [
  "hbsir",
  "ruff>=0.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hbsir = ["**/*.yaml", "**/*.csv"]
